fix isotope load animations and animation blurring

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ img, input, textarea, button, submit, a,
   -moz-transition: opacity .2s ease, color .2s ease, background-color .2s ease;
   -webkit-transition: opacity .2s ease, color .2s ease, background-color .2s ease;
   outline: 0;
-  -webkit-transform: translateZ(0) !important;
   }
 
 /*============================================================
@@ -605,6 +604,7 @@ b, strong {
   height: 100%;
   opacity: 0;
   padding: 0;
+  -webkit-transform: translateZ(0);
   }
 
 .overlay .product_info:hover {
@@ -1312,44 +1312,6 @@ cite a {
  Isotope Filtering
 ============================================================*/
 
-.isotope,
-.isotope .isotope-item {
-  /* change duration value to whatever you like */
-  -webkit-transition-duration: 0.8s;
-     -moz-transition-duration: 0.8s;
-      -ms-transition-duration: 0.8s;
-       -o-transition-duration: 0.8s;
-          transition-duration: 0.8s;
-  }
-
-.isotope {
-  -webkit-transition-property: height, width;
-     -moz-transition-property: height, width;
-      -ms-transition-property: height, width;
-       -o-transition-property: height, width;
-          transition-property: height, width;
-  }
-
-.isotope .isotope-item {
-  -webkit-transition-property: -webkit-transform, opacity;
-     -moz-transition-property:    -moz-transform, opacity;
-      -ms-transition-property:     -ms-transform, opacity;
-       -o-transition-property:      -o-transform, opacity;
-          transition-property:         transform, opacity;
-  }
-
-/**** disabling Isotope CSS3 transitions ****/
-
-.isotope.no-transition,
-.isotope.no-transition .isotope-item,
-.isotope .isotope-item.no-transition {
-  -webkit-transition-duration: 0s;
-     -moz-transition-duration: 0s;
-      -ms-transition-duration: 0s;
-       -o-transition-duration: 0s;
-          transition-duration: 0s;
-  }
-
 .isotope-item {
   z-index: 2;
   }
@@ -1606,12 +1568,12 @@ h3#price.sale,
 /* Font ----------------------------------------*/
 
 *, body, form {
-  font-family: {{ theme.font | font_family }};
+  font-family: {{ theme.font | font_family_for_group }};
   }
 
 h1, h2, h3, h4, h5, h6,
 dl dt {
-  font-family: {{ theme.header_font | font_family }};
+  font-family: {{ theme.header_font | font_family_for_group }};
   }
   
 #content #description,
